Fix onion-skinning setting labels wrapping

--- a/addons/onion-skinning/style.css
+++ b/addons/onion-skinning/style.css
@@ -91,6 +91,6 @@
   stroke: #ddd;
 }
 
-.sa-onion-label {
+.sa-onion-settings-label {
   white-space: nowrap;
 }
